terraform/templates/manifests/cnoe-dev-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cnoe-dev-gateway
  namespace: istio-gateway
spec:
  selector:
    istio: gateway
  servers:
    - hosts:
        - "*.cnoe-dev.nexus.ripplenet.dev"
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        credentialName: cnoe-dev-cert
        mode: SIMPLE
