terraform/templates/manifests/vs-argocd.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  gateways:
  - istio-gateway/cnoe-dev-gateway
  hosts:
  - ${ARGOCD_DOMAIN_NAME}
  http:
    - route:
      - destination:
         host: argocd-server
         port:
           number: 443
