terraform/templates/manifests/vs-keycloak.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
spec:
  gateways:
  - istio-gateway/cnoe-dev-gateway
  hosts:
  - ${KEYCLOAK_DOMAIN_NAME}
  http:
    - match:
      - uri:
         prefix: /realms/master
      route:
      - destination:
         host: keycloak
         port:
           number: 8081
    - match:
      - uri:
         exact: /
      route:
      - destination:
         host: keycloak
         port:
           number: 8081
    - match:
      - uri:
         prefix: /realms
      route:
      - destination:
         host: keycloak
         port:
           number: 8080
    - match:
      - uri:
         prefix: /resources
      route:
      - destination:
         host: keycloak
         port:
           number: 8080
